fix(themes): aligned link appearance w/ new theme

--- a/packages/themes/src/MenderNext/styles/main.less
+++ b/packages/themes/src/MenderNext/styles/main.less
@@ -103,10 +103,8 @@ a,
 span.link,
 .copy-to-clipboard svg {
   font-weight: 500;
-  text-decoration: none;
   color: @linkcolor;
   cursor: pointer;
-
   &:hover {
     color: @linkhover;
   }
